// Copyright 2019 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package google.cloud.datacatalog.v1beta1;

import "google/api/annotations.proto";
import "google/cloud/datacatalog/v1beta1/gcs_fileset_spec.proto";
import "google/cloud/datacatalog/v1beta1/schema.proto";
import "google/cloud/datacatalog/v1beta1/search.proto";
import "google/cloud/datacatalog/v1beta1/table_spec.proto";
import "google/cloud/datacatalog/v1beta1/tags.proto";
import "google/cloud/datacatalog/v1beta1/timestamps.proto";
import "google/iam/v1/iam_policy.proto";
import "google/iam/v1/policy.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option cc_enable_arenas = true;
option go_package = "google.golang.org/genproto/googleapis/cloud/datacatalog/v1beta1;datacatalog";
option java_multiple_files = true;
option java_package = "com.google.cloud.datacatalog";

// Cloud Data Catalog is a service that allows clients to discover,
// manage, and understand their Google Cloud data resources.
//
// To learn more about concepts and find how-to guides see
// https://cloud.google.com/data-catalog/docs/.
service DataCatalog {
  // Searches Cloud Data Catalog for multiple resources like entries, tags that
  // match a query.
  //
  // This is a custom method
  // (https://cloud.google.com/apis/design/custom_methods) and does not return
  // the complete resource, only the resource identifier and high level
  // fields. Clients can subsequentally call Get methods.
  //
  // See [Cloud Data Catalog Search
  // Syntax](/data-catalog/docs/how-to/search-reference)
  rpc SearchCatalog(SearchCatalogRequest) returns (SearchCatalogResponse) {
    option (google.api.http) = {
      post: "/v1beta1/catalog:search"
      body: "*"
    };
  }

  // Creates an EntryGroup.
  rpc CreateEntryGroup(CreateEntryGroupRequest) returns (EntryGroup) {
    option (google.api.http) = {
      post: "/v1beta1/{parent=projects/*/locations/*}/entryGroups"
      body: "entry_group"
    };
  }

  // Gets an EntryGroup.
  rpc GetEntryGroup(GetEntryGroupRequest) returns (EntryGroup) {
    option (google.api.http) = {
      get: "/v1beta1/{name=projects/*/locations/*/entryGroups/*}"
    };
  }

  // Deletes an EntryGroup. Only entry groups that do not contain entries can be
  // deleted.
  rpc DeleteEntryGroup(DeleteEntryGroupRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1beta1/{name=projects/*/locations/*/entryGroups/*}"
    };
  }

  // Creates an entry. Currently only entries of FILESET type can be created.
  rpc CreateEntry(CreateEntryRequest) returns (Entry) {
    option (google.api.http) = {
      post: "/v1beta1/{parent=projects/*/locations/*/entryGroups/*}/entries"
      body: "*"
    };
  }

  // Updates an existing entry.
  rpc UpdateEntry(UpdateEntryRequest) returns (Entry) {
    option (google.api.http) = {
      patch: "/v1beta1/{entry.name=projects/*/locations/*/entryGroups/*/entries/*}"
      body: "*"
    };
  }

  // Deletes an existing entry.
  rpc DeleteEntry(DeleteEntryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1beta1/{name=projects/*/locations/*/entryGroups/*/entries/*}"
    };
  }

  // Gets an entry.
  rpc GetEntry(GetEntryRequest) returns (Entry) {
    option (google.api.http) = {
      get: "/v1beta1/{name=projects/*/locations/*/entryGroups/*/entries/*}"
    };
  }

  // Get an entry by target resource name. This method allows clients to use
  // the resource name from the source Google Cloud Platform service to get the
  // Cloud Data Catalog Entry.
  rpc LookupEntry(LookupEntryRequest) returns (Entry) {
    option (google.api.http) = {
      get: "/v1beta1/entries:lookup"
    };
  }

  // Creates a tag template.
  rpc CreateTagTemplate(CreateTagTemplateRequest) returns (TagTemplate) {
    option (google.api.http) = {
      post: "/v1beta1/{parent=projects/*}/tagTemplates"
      body: "*"
    };
  }

  // Gets a tag template.
  rpc GetTagTemplate(GetTagTemplateRequest) returns (TagTemplate) {
    option (google.api.http) = {
      get: "/v1beta1/{name=projects/*/tagTemplates/*}"
    };
  }

  // Updates a tag template. This method cannot be used to update the fields of
  // a template. The tag template fields are represented as separate resources
  // and should be updated using their own create/update/delete methods.
  rpc UpdateTagTemplate(UpdateTagTemplateRequest) returns (TagTemplate) {
    option (google.api.http) = {
      patch: "/v1beta1/{tag_template.name=projects/*/tagTemplates/*}"
      body: "tag_template"
    };
  }

  // Deletes a tag template and all tags using the template.
  rpc DeleteTagTemplate(DeleteTagTemplateRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1beta1/{name=projects/*/tagTemplates/*}"
    };
  }

  // Creates a field in a tag template.
  rpc CreateTagTemplateField(CreateTagTemplateFieldRequest)
      returns (TagTemplateField) {
    option (google.api.http) = {
      post: "/v1beta1/{parent=projects/*/tagTemplates/*}/fields"
      body: "*"
    };
  }

  // Updates a field in a tag template. This method cannot be used to update the
  // field type.
  rpc UpdateTagTemplateField(UpdateTagTemplateFieldRequest)
      returns (TagTemplateField) {
    option (google.api.http) = {
      patch: "/v1beta1/{name=projects/*/tagTemplates/*/fields/*}"
      body: "tag_template_field"
    };
  }

  // Renames a field in a tag template.
  rpc RenameTagTemplateField(RenameTagTemplateFieldRequest)
      returns (TagTemplateField) {
    option (google.api.http) = {
      post: "/v1beta1/{name=projects/*/tagTemplates/*/fields/*}:rename"
      body: "*"
    };
  }

  // Deletes a field in a tag template and all uses of that field.
  rpc DeleteTagTemplateField(DeleteTagTemplateFieldRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1beta1/{name=projects/*/tagTemplates/*/fields/*}"
    };
  }

  // Creates a tag on an [Entry][google.cloud.datacatalog.v1beta1.Entry].
  rpc CreateTag(CreateTagRequest) returns (Tag) {
    option (google.api.http) = {
      post: "/v1beta1/{parent=projects/*/locations/*/entryGroups/*/entries/*}/tags"
      body: "*"
      additional_bindings {
        post: "/v1beta1/{parent=projects/*/locations/*/entryGroups/*}/tags"
        body: "*"
      }
    };
  }

  // Updates an existing tag.
  rpc UpdateTag(UpdateTagRequest) returns (Tag) {
    option (google.api.http) = {
      patch: "/v1beta1/{tag.name=projects/*/locations/*/entryGroups/*/entries/*/tags/*}"
      body: "*"
      additional_bindings {
        patch: "/v1beta1/{tag.name=projects/*/locations/*/entryGroups/*/tags/*}"
        body: "*"
      }
    };
  }

  // Deletes a tag.
  rpc DeleteTag(DeleteTagRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1beta1/{name=projects/*/locations/*/entryGroups/*/entries/*/tags/*}"
      additional_bindings {
        delete: "/v1beta1/{name=projects/*/locations/*/entryGroups/*/tags/*}"
      }
    };
  }

  // Lists tags on an entry.
  // This method can be used to fetch all tags for an
  // [Entry][google.cloud.datacatalog.v1beta1.Entry] or
  // [EntryGroup][google.cloud.datacatalog.v1beta1.EntryGroup]. It can also be
  // limited to a [TagTemplate][google.cloud.datacatalog.v1beta1.TagTemplate]
  // within an Entry or EntryGroup.
  //
  // Clients can specify filters to limit the results.
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {
    option (google.api.http) = {
      get: "/v1beta1/{parent=projects/*/locations/*/entryGroups/*/entries/*}/tags"
      additional_bindings {
        get: "/v1beta1/{parent=projects/*/locations/*/entryGroups/*}/tags"
      }
    };
  }

  // Sets the access control policy for a resource. Replaces any existing
  // policy.
  // Supported resources are:
  //   - tag templates.
  // Note, this method cannot be used to manage policies for BigQuery, Cloud
  // Pub/Sub and any external Google Cloud Platform resources synced to Cloud
  // Data Catalog.
  //
  // Callers must have Google IAM permission
  // `datacatalog.tagTemplates.setIamPolicy` to set policies on tag templates.
  rpc SetIamPolicy(google.iam.v1.SetIamPolicyRequest)
      returns (google.iam.v1.Policy) {
    option (google.api.http) = {
      post: "/v1beta1/{resource=projects/*/tagTemplates/*}:setIamPolicy"
      body: "*"
      additional_bindings {
        post: "/v1beta1/{resource=projects/*/locations/*/entryGroups/*/entries/*}:setIamPolicy"
        body: "*"
      }
    };
  }

  // Gets the access control policy for a resource. A `NOT_FOUND` error
  // is returned if the resource does not exist. An empty policy is returned
  // if the resource exists but does not have a policy set on it.
  //
  // Supported resource are:
  //   - tag templates.
  // Note, this method cannot be used to manage policies for BigQuery, Cloud
  // Pub/Sub and any external Google Cloud Platform resources synced to Cloud
  // Data Catalog.
  //
  // Caller must have Google IAM `datacatalog.tagTemplates.getIamPolicy`
  // permission on the tag template resource.
  rpc GetIamPolicy(google.iam.v1.GetIamPolicyRequest)
      returns (google.iam.v1.Policy) {
    option (google.api.http) = {
      post: "/v1beta1/{resource=projects/*/tagTemplates/*}:getIamPolicy"
      body: "*"
      additional_bindings {
        post: "/v1beta1/{resource=projects/*/locations/*/entryGroups/*/entries/*}:getIamPolicy"
        body: "*"
      }
    };
  }

  // Returns the caller's permissions on a resource.
  // If the resource does not exist, an empty set of permissions is returned
  // (a `NOT_FOUND` error is not returned).
  //
  // Supported resource are:
  //   - tag templates.
  // Note, this method cannot be used to manage policies for BigQuery, Cloud
  // Pub/Sub and any external Google Cloud Platform resources synced to Cloud
  // Data Catalog.
  //
  // A caller is not required to have Google IAM permission to make this
  // request.
  rpc TestIamPermissions(google.iam.v1.TestIamPermissionsRequest)
      returns (google.iam.v1.TestIamPermissionsResponse) {
    option (google.api.http) = {
      post: "/v1beta1/{resource=projects/*/tagTemplates/*}:testIamPermissions"
      body: "*"
      additional_bindings {
        post: "/v1beta1/{resource=projects/*/locations/*/entryGroups/*/entries/*}:testIamPermissions"
        body: "*"
      }
    };
  }
}

// Request message for
// [SearchCatalog][google.cloud.datacatalog.v1beta1.DataCatalog.SearchCatalog].
message SearchCatalogRequest {
  // List of organizations to search within.
  repeated string scope_org_ids = 10;

  // Required. The query string in search query syntax. The query must be
  // non-empty.
  //
  // Query strings can be simple as "x" or more qualified as:
  //
  // * name:x
  // * column:x
  // * desc:x OR description:y
  // * column_desc:x OR column_description:x
  //
  // Note: Query tokens need to have a minimum of 3 characters for substring
  // matching to work correctly. See [Cloud Data Catalog Search
  // Syntax](/data-catalog/docs/how-to/search-reference) for more information.
  string query = 1;

  // Number of results in the search page. If <=0 then defaults to 10.
  // Max limit for page_size is 1000. Throws an invalid argument for page_size >
  // 1000.
  int32 page_size = 2;

  // Specifies which page is requested. If empty then the first page
  // is returned.
  string page_token = 3;

  // Specifies the ordering of results following syntax at
  // https://cloud.google.com/apis/design/design_patterns#sorting_order. We only
  // support ordering by a single metrics field and currently supported choices
  // are:
  //
  //  * 'relevance'
  //  * 'last_access_timestamp'
  //  * 'last_modified_timestamp' and
  //  * 'title'.
  string order_by = 5;

  // To exclude/include content from Google Cloud Platform public datasets in
  // the search results. Google Cloud Platform public datasets are
  // https://cloud.google.com/public-datasets/. By default, content from Google
  // Cloud Platform public datasets are included.
  bool exclude_gcp_public_datasets = 13;
}

// Response message for
// [SearchCatalog][google.cloud.datacatalog.v1beta1.DataCatalog.SearchCatalog].
message SearchCatalogResponse {
  // Search results in descending order of relevance.
  repeated SearchCatalogResult results = 1;

  // The token that can be used to retrieve the next page of results.
  string next_page_token = 3;
}

// Request message for
// [CreateEntryGroup][google.cloud.datacatalog.v1beta1.DataCatalog.CreateEntryGroup].
message CreateEntryGroupRequest {
  // Required. The name of the project this entry group is in. Example:
  // "projects/{project_id}/locations/{location}".
  string parent = 1;

  // Required. The id of the entry group to create.
  string entry_group_id = 3;

  // The group to create.
  EntryGroup entry_group = 2;
}

// Request message for
// [GetEntryGroup][google.cloud.datacatalog.v1beta1.DataCatalog.GetEntryGroup].
message GetEntryGroupRequest {
  // Required. The name of the entry group. For example,
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}".
  string name = 1;

  // If the FieldMask is not set, all entry contents are returned.
  // If the FieldMask is set, only fields specified by the mask are returned.
  google.protobuf.FieldMask read_mask = 2;
}

// Request message for
// [DeleteEntryGroup][google.cloud.datacatalog.v1beta1.DataCatalog.DeleteEntryGroup].
message DeleteEntryGroupRequest {
  // Required. The name of the entry group. For example,
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}".
  string name = 1;
}

// Request message for
// [CreateEntry][google.cloud.datacatalog.v1beta1.DataCatalog.CreateEntry].
message CreateEntryRequest {
  // Required. The name of the entry group this entry is in. Example:
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}".
  string parent = 1;

  // Required. The id of the entry to create.
  string entry_id = 3;

  // The entry to create.
  Entry entry = 2;
}

// Request message for
// [UpdateEntry][google.cloud.datacatalog.v1beta1.DataCatalog.UpdateEntry].
message UpdateEntryRequest {
  // The updated Entry.
  Entry entry = 1;

  // The fields to update on the entry.  If absent or empty, all modifiable
  // fields are updated.
  //
  // Modifiable fields in synced entries:
  //
  // 1. schema (Pub/Sub topics only)
  //
  // Modifiable fields in native entries:
  //
  // 1. display_name
  // 2. description
  // 3. schema
  google.protobuf.FieldMask update_mask = 2;
}

// Request message for
// [DeleteEntry][google.cloud.datacatalog.v1beta1.DataCatalog.DeleteEntry].
message DeleteEntryRequest {
  // Required. The name of the entry. For example,
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}/entries/{entry_id}".
  string name = 1;
}

// Request message for
// [GetEntry][google.cloud.datacatalog.v1beta1.DataCatalog.GetEntry].
message GetEntryRequest {
  // Required. The name of the entry. For example,
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}/entries/{entry_id}".
  string name = 1;
}

// Request message for
// [LookupEntry][google.cloud.datacatalog.v1beta1.DataCatalog.LookupEntry].
message LookupEntryRequest {
  // Represents either the Google Cloud Platform resource or SQL name for a
  // Google Cloud Platform resource.
  oneof target_name {
    // The full name of the Google Cloud Platform resource the Data Catalog
    // entry represents. See:
    // https://cloud.google.com/apis/design/resource_names#full_resource_name
    // Example:
    // "//bigquery.googleapis.com/projects/projectId/datasets/datasetId/tables/tableId".
    string linked_resource = 1;

    // The SQL name of the entry. Example:
    //
    // 1. cloud_pubsub.project_id.topic_id
    // 2. bigquery.project_id.dataset_id.table_id
    // 3. datacatalog.project_id.location_id.entry_group_id.entry_id
    string sql_resource = 3;
  }
}

// Entry Metadata.
// A Data Catalog Entry resource represents another resource in Google
// Cloud Platform, such as a BigQuery Dataset or a Pub/Sub Topic. Clients can
// use the `linked_resource` field in the Entry resource to refer to the
// original resource id of the source system.
//
// An Entry resource contains resource details, such as its schema. An Entry can
// also be used to attach flexible metadata, such as a
// [Tag][google.cloud.datacatalog.v1beta1.Tag].
message Entry {
  // Output only. The Data Catalog resource name of the entry in URL format. For
  // example,
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}/entries/{entry_id}".
  string name = 1;

  // The full name of the cloud resource the entry belongs to. See:
  // https://cloud.google.com/apis/design/resource_names#full_resource_name
  //
  // Data Catalog supports resources from select Google Cloud Platform systems.
  // `linked_resource` is the full name of the Google Cloud Platform resource.
  // For example, the `linked_resource` for a table resource from BigQuery is:
  //
  // "//bigquery.googleapis.com/projects/projectId/datasets/datasetId/tables/tableId".
  string linked_resource = 9;

  // Type of entry.
  EntryType type = 2;

  // Type specification information.
  oneof type_spec {
    // Specification that applies to a Cloud Storage fileset. This is only valid
    // on entries of type FILESET.
    GcsFilesetSpec gcs_fileset_spec = 6;

    // Specification that applies to a BigQuery table. This is only valid on
    // entries of type TABLE.
    BigQueryTableSpec bigquery_table_spec = 12;
  }

  // Display information such as title and description.
  // A short name to identify the entry, for example,
  // "Analytics Data - Jan 2011".
  string display_name = 3;

  // Entry description, which can consist of several sentences or paragraphs
  // that describe entry contents.
  string description = 4;

  // Schema of the entry.
  Schema schema = 5;

  // Timestamps about the underlying Google Cloud Platform resource -- not about
  // this Data Catalog Entry.
  SystemTimestamps source_system_timestamps = 7;
}

// EntryGroup Metadata.
// An EntryGroup resource represents a logical grouping of zero or more
// Data Catalog [Entry][google.cloud.datacatalog.v1beta1.Entry] resources.
message EntryGroup {
  // A short name to identify the entry group, for example,
  // "analytics data - jan 2011".
  string display_name = 2;

  // Entry group description, which can consist of several sentences or
  // paragraphs that describe entry group contents.
  string description = 3;

  // Timestamps about this EntryGroup.
  SystemTimestamps data_catalog_timestamps = 4;
}

// Request message for
// [CreateTagTemplate][google.cloud.datacatalog.v1beta1.DataCatalog.CreateTagTemplate].
message CreateTagTemplateRequest {
  // Required. The name of the project this template is in. Example:
  // "projects/{project_id}".
  string parent = 1;

  // Required. The id of the tag template to create.
  string tag_template_id = 3;

  // The tag template to create.
  TagTemplate tag_template = 2;
}

// Request message for
// [GetTagTemplate][google.cloud.datacatalog.v1beta1.DataCatalog.GetTagTemplate].
message GetTagTemplateRequest {
  // Required. The name of the tag template. For example,
  // "projects/{project_id}/tagTemplates/{tag_template_id}".
  string name = 1;
}

// Request message for
// [UpdateTagTemplate][google.cloud.datacatalog.v1beta1.DataCatalog.UpdateTagTemplate].
message UpdateTagTemplateRequest {
  // The template to update.
  TagTemplate tag_template = 1;

  // The field mask specifies the parts of the template to overwrite.
  //
  // Allowed fields:
  //
  //   * display_name
  //
  // If the field mask is omitted, all of the allowed fields above will be
  // updated.
  google.protobuf.FieldMask update_mask = 2;
}

// Request message for
// [DeleteTagTemplate][google.cloud.datacatalog.v1beta1.DataCatalog.DeleteTagTemplate].
message DeleteTagTemplateRequest {
  // The name of the tag template to delete. For example,
  // "projects/{project_id}/tagTemplates/{tag_template_id}".
  string name = 1;

  // Set this field to true to force the deletion of all tags using this
  // template. If this field is set to false (the default value) and the tag
  // template is already in use, then this RPC will return a Precondition Failed
  // error.
  bool force = 2;
}

// Entry resources in Cloud Data Catalog can be of different types e.g. BigQuery
// Table entry is of type 'TABLE', pubsub topics is of type 'DATA_STREAM'. This
// enum describes all the possible types Cloud Data Catalog contains.
enum EntryType {
  // Default unknown type
  ENTRY_TYPE_UNSPECIFIED = 0;

  // The type of entry that has a GoogleSQL schema, including logical views.
  TABLE = 2;

  // An entry type which is a set of files or objects. Example - Cloud Storage
  // fileset.
  FILESET = 4;
}

// Request message for
// [CreateTag][google.cloud.datacatalog.v1beta1.DataCatalog.CreateTag].
message CreateTagRequest {
  // Required.
  // The name of the resource to attach this tag to. Tags can be attached to
  // Entries. (example:
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}/entries/{entry_id}").
  string parent = 1;

  // The tag to create.
  Tag tag = 2;
}

// Request message for
// [UpdateTag][google.cloud.datacatalog.v1beta1.DataCatalog.UpdateTag].
message UpdateTagRequest {
  // The updated tag.
  Tag tag = 1;

  // The fields to update on the Tag.  If absent or empty, all modifiable fields
  // are updated. Currently the only modifiable field is the field `fields`.
  google.protobuf.FieldMask update_mask = 2;
}

// Request message for
// [DeleteTag][google.cloud.datacatalog.v1beta1.DataCatalog.DeleteTag].
message DeleteTagRequest {
  // The name of the tag to delete. For example,
  // "projects/{project_id}/locations/{location}/entryGroups/{entry_group_id}/entries/{entry_id}/tags/{tag_id}".
  string name = 1;
}

// Request message for
// [CreateTagTemplateField][google.cloud.datacatalog.v1beta1.DataCatalog.CreateTagTemplateField].
message CreateTagTemplateFieldRequest {
  // Required. The name of the project this template is in. Example:
  // "projects/{project_id}/tagTemplates/{tag_template_id}".
  string parent = 1;

  // Required. The id of the tag template field to create.
  // Field ids can contain letters (both uppercase and lowercase), numbers
  // (0-9), underscores (_) and dashes (-). Field ids must be at least 1
  // character long and at most 128 characters long. Field ids must also be
  // unique to their template.
  string tag_template_field_id = 2;

  // Required. The tag template field to create.
  TagTemplateField tag_template_field = 3;
}

// Request message for
// [UpdateTagTemplateField][google.cloud.datacatalog.v1beta1.DataCatalog.UpdateTagTemplateField].
message UpdateTagTemplateFieldRequest {
  // Required. The name of the tag template field. For example,
  // "projects/{project_id}/tagTemplates/{tag_template_id}/fields/{tag_template_field_id}".
  string name = 1;

  // Required. The template to update.
  TagTemplateField tag_template_field = 2;

  // The field mask specifies the parts of the template to overwrite.
  // Allowed fields:
  //
  //   * display_name
  //   * type.enum_type
  //
  // If the field mask is omitted, all of the allowed fields above will be
  // updated.
  google.protobuf.FieldMask update_mask = 3;
}

// Request message for
// [RenameTagTemplateField][google.cloud.datacatalog.v1beta1.DataCatalog.RenameTagTemplateField].
message RenameTagTemplateFieldRequest {
  // Required. The name of the tag template. For example,
  // "projects/{project_id}/tagTemplates/{tag_template_id}/fields/{tag_template_field_id}".
  string name = 1;

  // Required. The new id of this tag template field. For example,
  // "my_new_field".
  string new_tag_template_field_id = 2;
}

// Request message for
// [DeleteTagTemplateField][google.cloud.datacatalog.v1beta1.DataCatalog.DeleteTagTemplateField].
message DeleteTagTemplateFieldRequest {
  // Required. The name of the tag template field to delete. For example,
  // "projects/{project_id}/tagTemplates/{tag_template_id}/fields/{tag_template_field_id}".
  string name = 1;

  // Set this field to true to force the deletion of all usages of this tag
  // field. If this field is set to false (the default value) and the tag
  // template field is already in use, then this RPC will return a Precondition
  // Failed error.
  bool force = 2;
}

// Request message for
// [ListTags][google.cloud.datacatalog.v1beta1.DataCatalog.ListTags].
message ListTagsRequest {
  // Required.
  // The name of the Data Catalog resource to list the tags of. The
  // resource could be an [Entry][google.cloud.datacatalog.v1beta1.Entry] or a
  // [Dataset][google.cloud.datacatalog.v1beta1.Dataset].
  string parent = 1;

  // Optional. The maximum number of tags to return. Default is 10. Max limit
  // is 1000.
  int32 page_size = 2;

  // Optional. Token that specifies which page is requested. If empty, the first
  // page is returned.
  string page_token = 3;
}

// Response message for
// [ListTags][google.cloud.datacatalog.v1beta1.DataCatalog.ListTags].
message ListTagsResponse {
  // [Tag][google.cloud.datacatalog.v1beta1.Tag] details.
  repeated Tag tags = 1;

  // Token to retrieve the next page of results. It is set to empty if no items
  // remain in results.
  string next_page_token = 2;
}
